cmake_minimum_required(VERSION 3.29)
project(ContenedoresDinamicos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio1
    VectoresIteradores.cpp)

add_executable(Ejercicio2
        ContenedoresEstandarYSecuencias.cpp)

add_executable(Ejercicio3
        Algoritmos.cpp)

add_executable(Ejercicio4
        CalculoNumerico.cpp)

add_executable(Ejercicio5
        C++Moderno.cpp)

add_executable(Ejercicio6
        IntroduccionBoost.cpp)